--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,12 +1,7 @@
 name: Build and Push Docker Image to GitHub Container Registry
 
 on:
-  push:
-    branches:
-      - main  # 或者你想触发构建的其他分支
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 jobs:
   build:
