--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -17,7 +17,6 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # 构建 Docker 镜像
       - name: Build Docker image
         run: |
           docker buildx create --use
@@ -25,7 +24,7 @@ jobs:
 
   push:
     runs-on: ubuntu-latest
-    needs: build  # 确保推送在构建之后执行
+    needs: build
 
     steps:
       - name: Login to GitHub Container Registry
