--- a/.gitea/workflows/.gitea.yml
+++ b/.gitea/workflows/.gitea.yml
@@ -1,32 +1,40 @@
 kind: pipeline
 name: Build and Push Docker Image to Gitea Container Registry
 
-steps:
-  - name: checkout
-    image: alpine/git
-    commands:
-      - git clone --depth 1 ${CI_REPO} .
-
-  - name: setup-buildx
-    image: docker:23
-    privileged: true
-    commands:
-      - docker buildx create --use
-
-  - name: build-docker-image
-    image: docker:23
-    commands:
-      - docker buildx build --file ./Dockerfile --tag ${CI_REGISTRY}/comfy_container_ui/c_c_u:latest .
-
-  - name: push-docker-image
-    image: docker:23
-    environment:
-      DOCKER_PASSWORD:
-        from_secret: package_gitea_token
-    commands:
-      - echo "${package_gitea_token}" | docker login ${CI_REGISTRY} -u "${CI_COMMITTER}" --password-stdin
-      - docker push ${CI_REGISTRY}/comfy_container_ui/c_c_u:latest
-
 trigger:
   event:
     - custom
+jobs:
+  build:
+    steps:
+      - name: checkout
+        image: alpine/git
+        commands:
+          - git clone --depth 1 ${CI_REPO} .
+
+      - name: setup-buildx
+        image: docker:23
+        privileged: true
+        commands:
+          - docker buildx create --use
+
+      - name: build-docker-image
+        image: docker:23
+        commands:
+          - docker buildx build --file ./Dockerfile --tag ${CI_REGISTRY}/comfy_container_ui/c_c_u:latest .
+
+  push:
+    needs: [build]
+    steps:
+      - name: login-to-registry
+        image: docker:23
+        environment:
+          DOCKER_PASSWORD:
+            from_secret: PACKAGE_GITEA_TOKEN
+        commands:
+          - echo "${DOCKER_PASSWORD}" | docker login ${CI_REGISTRY} -u "${CI_AUTHOR}" --password-stdin
+
+      - name: push-docker-image
+        image: docker:23
+        commands:
+          - docker push ${CI_REGISTRY}/comfy_container_ui/c_c_u:latest
