--- a/.gitea/workflows/.gitea.yml
+++ b/.gitea/workflows/.gitea.yml
@@ -3,7 +3,10 @@ name: Build and Push Docker Image to Gitea Container Registry
 
 trigger:
   event:
-    - custom
+    - push
+  branch:
+    - main
+    
 jobs:
   build:
     steps:
