--- a/.gitea/workflows/.gitea.yml
+++ b/.gitea/workflows/.gitea.yml
@@ -5,23 +5,23 @@ jobs:
   buildnpush:
     steps:
       - name: checkout
-        image: alpine/git
+        image: ubuntu:22.04
         commands:
           - git clone --depth 1 ${CI_REPO} .
-    
+
       - name: setup-buildx
-        image: docker:23
+        image: ubuntu:22.04
         privileged: true
         commands:
           - docker buildx create --use
-    
+
       - name: build-docker-image
-        image: docker:23
+        image: ubuntu:22.04
         commands:
           - docker buildx build --file ./Dockerfile --tag ${CI_REGISTRY}/comfy_container_ui/c_c_u:latest .
-    
+
       - name: push-docker-image
-        image: docker:23
+        image: ubuntu:22.04
         environment:
           DOCKER_PASSWORD:
             from_secret: package_gitea_token
