--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -8,7 +8,11 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest    
+    permissions:
+      contents: read
+      packages: write
+      id-token: write
 
     steps:
       # 检出代码
