fix(github.yml): 修复GitHub令牌引用错误

--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}  # GitHub 用户名
-          password: ${{ secrets.TOKEN }}  # GitHub 自动生成的令牌
+          password: ${{ secrets.GITHUB_TOKEN }}  # GitHub 自动生成的令牌
 
       # 添加调试步骤
       - name: Test Network Connection
