--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -1,40 +1,29 @@
-name: Build and Push Docker Image to GitHub Container Registry
-
+name: Build and Push
 on:
   push:
     branches:
       - main
-
+permissions:
+  packages: write
+  id-token: write
 jobs:
   build:
-    runs-on: ubuntu-latest    
-    permissions:
-      contents: read
-      packages: write
-      id-token: write
-
+    runs-on: ubuntu-latest
     steps:
-      # 检出代码
       - name: Checkout code
         uses: actions/checkout@v3
-
-      # 设置 Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-
-      # 登录到 GitHub Container Registry
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}  # GitHub 用户名
-          password: ${{ secrets.GITHUB_TOKEN }}  # GitHub 自动生成的令牌
-
-      # 构建并推送 Docker 镜像
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push Docker image to GitHub Container Registry
         uses: docker/build-push-action@v3
         with:
-          context: .  # 当前目录作为构建上下文
-          file: ./Dockerfile  # Dockerfile 路径
-          push: true  # 推送镜像
-          tags: ghcr.io/inknight-dednet/comfy_container_ui:latest  # 镜像推送到 GitHub 包注册表
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ghcr.io/inknight-dednet/comfy_container_ui:latest
